// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api aboveWidth returns the correct media query 1`] = `
@media screen and (min-width: 25em) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`api atBreakpointWidth returns the correct query when it is between other breakpoints 1`] = `
@media screen and (min-width: 68.75em) and (max-width: 81.249375em) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`api atBreakpointWidth returns the correct query when it is first breakpoint 1`] = `
@media screen and (min-width: 25em) and (max-width: 56.249375em) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`api atBreakpointWidth returns the correct query when it is last breakpoint 1`] = `
@media screen and (min-width: 81.25em) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`api belowWidth returns the correct media query 1`] = `
@media screen and (max-width: 24.999375em) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`api betweenWidths returns the correct media query 1`] = `
@media screen and (min-width: 25em) and (max-width: 56.249375em) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`api betweenWidths returns the correct media query with breakpoint order reversed 1`] = `
@media screen and (min-width: 25em) and (max-width: 56.249375em) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`api configuration config object adjusts values based on 'basefontSize' 1`] = `
@media screen and (max-width: 39.999em) {
    background-color: function () {
        return 'GhostWhite';
    }; ;
}
`;

exports[`api maxWidth returns the correct media fragment 1`] = `(max-width: 24.999375em)`;

exports[`api mediaType returns the configured media type if passed in as argument 1`] = `print`;

exports[`api mediaType returns the configured media type if passed in as argument 2`] = `print, screen`;

exports[`api mediaType returns the correct default media type if called with no arguments 1`] = `screen`;

exports[`api minWidth returns the correct media fragment 1`] = `(min-width: 25em)`;
